# kiln

./: README.md  pyproject.toml
.codex/skills/kiln/: OPERATOR.md  SKILL.md
docs/superpowers/plans/: 2026-03-31-kiln-mvp.md
docs/superpowers/specs/: 2026-03-31-kiln-design.md
scripts/: install_cron.sh
src/kiln/: __init__.py  cli.py  db.py  dot.py  models.py  paths.py  reporting.py  runtime.py  scheduler.py  slack.py
tests/: test_dot.py  test_operator.py  test_reporting.py  test_runtime.py  test_slack.py
workflows/: operator.dot  sample.dot
